--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 	<meta http-equiv='Pragma' content='no-cache' />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta name="author" content="DSX,工科男表白,浪漫表白,表白网站">
-	<meta name="description" content="这是XXX为XXX表白制作的表白网站">
 	<title>feipeng LOVE sunny</title>
 	<link rel="stylesheet" href="all.min.css" >
 </head>
@@ -31,7 +29,7 @@
 				<p class="text2">按键盘 "↓" <span id="text-78" contenteditable="true">开始倾听工科男的浪漫表白</span></p>
 			</div>
 			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
-				<p class="top-text" id="text-1" contenteditable="true">过去的feipeng一直是一个人生活，享受着孤独，也憧憬着爱情。</p>
+				<p style="font-size: 18px;" class="top-text" id="text-1 contenteditable="true">过去的feipeng一直是一个人生活享受着孤独,也憧憬着爱情。</p>
 				<img src="img/iali63.jpg" tppabs="img/iali63.jpg"  alt="过去的feipeng一直是一个人生活，享受着孤独，也憧憬着爱情。" />
 			</div>
 			<div id="/section-1/page-3" class="ft-page page-3 left-img" data-id="page-3">
@@ -79,7 +77,7 @@
 				<img src="img/iali25.jpg" tppabs="img/iali25.jpg" />
 			</div>
 			<div id="/section-3/page-3" class="ft-page page-13" data-id="page-3">
-				<img src="img/iali64.jpg" tppabs="img/iali64.jpg" alt='可是小明的爱情又在哪里呢？' />
+				<img style="height:60%" src="img/iali64.jpg" tppabs="img/iali64.jpg" alt='可是小明的爱情又在哪里呢？' />
 				<h3 id="text-13" contenteditable="true">可是feipeng的爱情又在哪里呢？</h3>
 			</div>
 			<div id="/section-3/page-4" class="ft-page page-14 left-img" data-id="page-4">
@@ -144,7 +142,7 @@
 				<img src="img/iali67.jpg" tppabs="img/iali67.jpg"  />
 			</div>
 			<div id="/section-5/page-4" class="ft-page page-28" data-id="page-4">
-				<h3 id="text-31" contenteditable="true">然后，feipeng和sunny一起去很多地方玩</h3>
+				<h3 id="text-31" contenteditable="true">然后一起去玩</h3>
 				<img src="img/iali40.jpg" tppabs="img/iali40.jpg" />
 			</div>
 			<div id="/section-5/page-5" class="ft-page page-29" data-id="page-5">
@@ -185,7 +183,7 @@
 				<img src="img/iali49.jpg" tppabs="img/iali49.jpg" />
 			</div>
 			<div id="/section-6/page-7" class="ft-page page-38 bottom-text" data-id="page-7">
-				<img src="img/iali21.jpg" tppabs="img/iali21.jpg" />
+				<img style="height:70%" src="img/iali21.jpg" tppabs="img/iali21.jpg" />
 				<h3 id="text-43" contenteditable="true">一定是我有什么做的不对，feipeng会这么想</h3>
 			</div>
 		</div>
@@ -223,21 +221,17 @@
 		<div class="ft-section section-8" data-id="section-8">
 			<div id="/section-8/page-1" class="ft-page page-46" data-id="page-1">
 				<img src="img/iali57.gif" tppabs="img/iali57.gif" />
-				<h3>
-					<span id="text-54" contenteditable="true">看着惊喜一点点准备好了</span>
-					<span id="text-55" contenteditable="true">feipeng好开心</span>
-					<span id="text-56" contenteditable="true">因为他想象着sunny看到时</span>
-					<span id="text-57" contenteditable="true">开心的样子</span>
-				</h3>
 			</div>
 			<div id="/section-8/page-2" class="ft-page page-47 top-text" data-id="page-2">
 				<img src="img/iali58.jpg" tppabs="img/iali58.jpg" />
 				<h3>
-					<span id="text-58" contenteditable="true">想想未来他们或许</span>
-                    <span id="text-59" contenteditable="true">会有一辈子</span>
-					<span id="text-59" contenteditable="true">feipeng好开心</span>
-					<span id="text-60" contenteditable="true">或许他可以和sunny一起</span>
-					<span id="text-61" contenteditable="true">去全世界好多地方玩</span></h3>
+					<span style="display:block;width:100%" id="text-58" contenteditable="true">
+						想想未来他们或许<br/>
+						会有一辈子<br/>
+						feipeng好开心<br/>
+						或许他可以和sunny一起<br/>
+						去全世界好多地方玩<br/>
+					</span>
 				
 			</div>
 			<div id="/section-8/page-3" class="ft-page page-48 left-img" data-id="page-3">
@@ -248,7 +242,7 @@
 			<img src="img/iali71.jpg" tppabs="img/iali71.jpg" />
 				<p class="text">
 					<span class='text' id="text-64" contenteditable="true">feipeng很幸福，因为他遇到了sunny。他相信后面的每天都会是快乐的</span><br />
-					<span class='text' id="text-65" contenteditable="true">简简单单，体会与XX在一起的每一个刻</span>
+					<span class='text' id="text-65" contenteditable="true">简简单单，体会与sunny在一起的每一个刻</span>
 				</p>
 			</div>
 			<div id="/section-8/page-5" class="ft-page page-50" data-id="page-5">
@@ -267,7 +261,7 @@
 		</div>
 		<div class="ft-section section-9" data-id="section-9">
 			<div id="/section-9/page-1" class="ft-page page-52 full-img" data-id="page-1">
-				<h3 id="text-71" contenteditable="true">如果三年后你注定是我女朋友，你何不提早行使你的权利</h3>
+				<h3 id="text-71" contenteditable="true">如果三年后你注定是我女朋友，<br/>你何不提早行使你的权利</h3>
 				<img src="img/iali20.jpg" tppabs="img/iali20.jpg"  />
 			</div>
 			<div id="/section-9/page-2" class="ft-page page-53" data-id="page-2">
@@ -284,21 +278,21 @@
 					<span id="text-74" contenteditable="true">无论精彩、平淡都会是他们喜欢的。</span><br /><br />
                     <span id="text-74" contenteditable="true" style="color:red">龚萱，我爱你</span><br />
 					<br />
-					<br />
-					<span> -- 按“Esc"键有惊喜</span>
 				</p>				
 			</div>
 		</div>
 	</div>
-	<div class="nojavascript">您的浏览器禁用了javascript，无法正常浏览本页面</div>
+	<div class="nojavascript">您的浏览器禁用了javascript，无法正常浏览本页面
+	</div>
 	
 
 	<audio id="bgmMusic" src="lovebgm.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>
 
 	
-	<script src="jquery.min.js"></script>
-	<script src="all.min.js" ></script>
-	<script src="love.min.js" ></script>
+	<script src="jquery.min.js" type="text/javascript"></script>
+	<script src="all.min.js" type="text/javascript"></script>
+	<script src="love.min.js" type="text/javascript"></script>
+
 	<div class="mPower"><span id="on" title="点击暂停" style=""></span><span id="off" title="点击播放"  style=""></span></div>
 
 	
