--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			</div>
 			<div id="/section-4/page-3" class="ft-page page-20" data-id="page-3">
 				<img src="img/iali59.png" tppabs="img/iali59.png" />
-				<h3 id="text-22" contenteditable="true">feipeng想。。。</h3>
+				<h3 style="float: right;margin-right: 30px;" id="text-22" contenteditable="true">feipeng想。。。</h3>
 				<img src="img/iali9.jpg" tppabs="img/iali9.jpg" />
 			</div>
 			<div id="/section-4/page-4" class="ft-page page-21" data-id="page-4">
@@ -273,12 +273,8 @@
 			</div>
 			<div id="/section-9/page-4" class="ft-page page-55 right-img" data-id="page-4">
 				<img src="img/14915.jpg" tppabs="img/14915.jpg" />
-				<p class="text">
-					<span id="text-73" contenteditable="true">我相信，feipeng和sunny的故事会一直继续下去。</span><br />
-					<span id="text-74" contenteditable="true">无论精彩、平淡都会是他们喜欢的。</span><br /><br />
-                    <span id="text-74" contenteditable="true" style="color:red">龚萱，我爱你</span><br />
+                    <span id="text-74" contenteditable="true" style="color:red;position: absolute;top: 40%;left: 80px;font-size: 30px;">龚萱，我爱你</span><br />
 					<br />
-				</p>				
 			</div>
 		</div>
 	</div>
