--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 				<img src="img/iali49.jpg" tppabs="img/iali49.jpg" />
 			</div>
 			<div id="/section-6/page-7" class="ft-page page-38 bottom-text" data-id="page-7">
-				<img style="height:70%" src="img/iali21.jpg" tppabs="img/iali21.jpg" />
+				<img style="height:65%" src="img/iali21.jpg" tppabs="img/iali21.jpg" />
 				<h3 id="text-43" contenteditable="true">一定是我有什么做的不对，feipeng会这么想</h3>
 			</div>
 		</div>
@@ -202,7 +202,8 @@
 				<h3 id="text-46" contenteditable="true"> feipeng又怎会飞的更高更远</h3>
 			</div>
 			<div id="/section-7/page-4" class="ft-page page-42" data-id="page-4">
-				<h3><span id="text-47" contenteditable="true">feipeng不想这样。他要为sunny改变自己</span><br /><span id="text-48" contenteditable="true">feipeng不知道sunny喜欢什么，但他一定会满足她的一切。</span></h3>
+				<h3>feipeng不知道sunny喜欢什么，但他一定会满足她的一切
+				</h3>
 				<img src="img/iali69.jpg" tppabs="img/iali69.jpg"  />
 			</div>
 			<div id="/section-7/page-5" class="ft-page page-43" data-id="page-5">
@@ -226,11 +227,10 @@
 				<img src="img/iali58.jpg" tppabs="img/iali58.jpg" />
 				<h3>
 					<span style="display:block;width:100%" id="text-58" contenteditable="true">
-						想想未来他们或许<br/>
-						会有一辈子<br/>
-						feipeng好开心<br/>
-						或许他可以和sunny一起<br/>
-						去全世界好多地方玩<br/>
+						想想未来他们或许会有一辈子<br/><br/>
+						feipeng好开心<br/><br/>
+						或许他可以和sunny一起<br/><br/>
+						去全世界好多地方玩<br/><br/>
 					</span>
 				
 			</div>
