--- a/index.html
+++ b/index.html
@@ -226,12 +226,12 @@
 			<div id="/section-8/page-2" class="ft-page page-47 top-text" data-id="page-2">
 				<img src="img/iali58.jpg" tppabs="img/iali58.jpg" />
 				<h3>
-					<span style="display:block;width:100%;    font-size: 12px;
+					<span style="display:block;width:100%;    font-size: 1.75rem;
 " id="text-58" contenteditable="true">
-						想想未来他们或许会有一辈子<br/><br/>
-						feipeng好开心<br/><br/>
-						或许他可以和sunny一起<br/><br/>
-						去全世界好多地方玩<br/><br/>
+						想想未来他们或许会有一辈子<br/>
+						feipeng好开心<br/>
+						或许他可以和sunny一起<br/>
+						去全世界好多地方玩<br/>
 					</span>
 				
 			</div>
