--- a/newyear/index.html
+++ b/newyear/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="mask">
-        <button>新年快乐,点我有惊喜</button>
+        <button>猪年快乐,点我有惊喜嘿嘿嘿</button>
     </div>
     <div class="code-wrapper">
         <pre id="code"></pre>
